# firq

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  description.txt  roadmap.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/firq-async/: Cargo.toml
crates/firq-async/src/: lib.rs
crates/firq-bench/: Cargo.toml
crates/firq-bench/src/: main.rs
crates/firq-core/: Cargo.toml
crates/firq-core/src/: api.rs  lib.rs  prometheus.rs  scheduler.rs  state.rs  tests.rs
crates/firq-examples/: Cargo.toml
crates/firq-examples/src/: main.rs
crates/firq-tower/: Cargo.toml
crates/firq-tower/src/: builder.rs  lib.rs
crates/firq-tower/tests/: integration.rs
docs/: axum_integration.md  benchmarks_v1.md  design.md  metrics.md  migration_v1.md
