[package]
name = "firq-async"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Tokio async adapter for firq-core"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saulhs12/firq"
documentation = "https://docs.rs/firq-async"
homepage = "https://github.com/saulhs12/firq"
readme = "../../README.md"
keywords = ["scheduler", "tokio", "fairness", "backpressure", "queue"]
categories = ["asynchronous", "concurrency", "network-programming"]

[dependencies]
firq-core = { path = "../firq-core", version = "0.1.0" }
futures-core = "0.3"
tokio = { version = "1", features = ["rt", "sync"] }

[dev-dependencies]
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
