[package]
name = "firq-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
firq-core = { path = "../firq-core" }
firq-async = { path = "../firq-async" }
firq-tower = { path = "../firq-tower" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net"] }
axum = "0.7"
serde_json = "1.0"

