[package]
name = "firq-examples"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
publish = false
description = "Executable examples for Firq core, async, and Tower integrations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saulhs12/firq"
documentation = "https://github.com/saulhs12/firq/tree/main/crates/firq-examples"
homepage = "https://github.com/saulhs12/firq"
readme = "../../README.md"
keywords = ["examples", "scheduler", "tower", "axum", "tokio"]
categories = ["asynchronous", "concurrency", "web-programming"]

[dependencies]
firq-core = { path = "../firq-core", version = "0.1.3" }
firq-async = { path = "../firq-async", version = "0.1.3" }
firq-tower = { path = "../firq-tower", version = "0.1.3" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net"] }
axum = "0.7"
actix-web = "4"
serde_json = "1.0"
tower = "0.4"
